Projects link works now.

--- a/home.html
+++ b/home.html
@@ -174,7 +174,7 @@
             </div>
 
             <div class="navbar-grid-Projects">
-                <a href = "reprojectspage.html">Projects</a>
+                <a href = "projects.html">Projects</a>
             </div>
 
             <div class="navbar-grid-Essays">
