project section updated to display Firebase

--- a/projects.html
+++ b/projects.html
@@ -258,7 +258,7 @@
 
         <div class = 'grid-projects'>
             
-            <div class = "individual-projects-grid" onclick = "window.location.href = 'essayPage1.html';">
+            <div class = "individual-projects-grid" onclick = "window.location.href = 'FirebaseDescription.html';">
                 <div class = "individual-projects-grid-img">
                 <img class = 'pro-image' src = "https://i.pinimg.com/originals/3d/dd/c6/3dddc6a2ae540e6df48ec9907e898f78.jpg">
 
@@ -269,7 +269,7 @@
                 </div>
                 <div class = 'individual-projects-grid-desc'>
                     <br>
-                    <h5 class = 'desc'>A site that allows users to create and customize accounts in order to chat realtime throughout a database.</h5> 
+                    <h5 class = 'desc'>A site that allows users to create and customize accounts in order to chat realtime throughout as their data is being saved in a database</h5> 
                     <hr class = 'new1'>
                 </div>
                 <div class = "individual-projects-grid-foot1">
