--- a/projects.html
+++ b/projects.html
@@ -319,22 +319,22 @@
                 </div>
             </div>
 
-            <div class = "individual-projects-grid" onclick = ''>
+            <div class = "individual-projects-grid" onclick = "window.location.href = 'Boeing717Description.html'">
                 <div class = "individual-projects-grid-img">
                 <img class = 'pro-image' src = "https://static.vecteezy.com/system/resources/previews/002/318/598/non_2x/abstract-dark-red-square-background-vector.jpg">
 
                 </div>
                 <div class = "individual-projects-grid-title">
-                <h3 class = 'pro-title'>Cyberpunk 2077</h3>
+                <h3 class = 'pro-title'>Boeing 717</h3>
 
                 </div>
                 <div class = 'individual-projects-grid-desc'>
                     <br>
-                    <h5 class = 'desc'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid assumenda exercitationem laudantium.</h5> 
+                    <h5 class = 'desc'>A virtual 3D model of one of Boeing's most nostalgic aircraft, the Boeing 717</h5> 
                     <hr class = 'new1'>
                 </div>
                 <div class = "individual-projects-grid-foot1">
-                    <h5 class = 'tool'>Programming</h5>
+                    <h5 class = 'tool'>Blender</h5>
                     <h5 class = 'type'>Tool</h5>
                 
                 
