--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <!-- Required meta tags -->
+        <!-- DO NOT CHANGE THE NAME OF THIS FILE/ COLLEGE PORTFOLIO -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
