--- a/RobloxClothingDescription.html
+++ b/RobloxClothingDescription.html
@@ -126,7 +126,9 @@
             <p class = 'text-description'>When I was 12, I had a huge obsession with the game Roblox. I always loved buying in-game perks and items for my avatar. However, those came with a huge price, and I always hated asking my parents for money, so I started searching for methods on how to make Robux. Consequently, I decided to watch many Youtube videos explaining the basics of the Roblox economy and how to make money fast. I learned the 3 main things for making money from Roblox are designing clothing, game development, GFX commissions, and selling Roblox limiteds. Since I decided on clothing, I looked at the catalog and tried to figure out fashion trends. I have noticed that there was a lot of off-brand clothing mimicking real-world brands, but there was a bare amount of clothing to match accessories, so on April 1, 2019, I created my first Roblox group, Kaan’s Cheap Clothing, at an investment price of 100 Robux.</p>
             <br>
 
-            <h1>Design Process</h1>
+            <h1 style = "text-align: center;">Design Process</h1>
+            <br>
+            <br>
             <br>
             <h1>Clothing</h1>
             <br>
@@ -139,13 +141,13 @@
             <p class = 'text-description'>To make my overlays, I use a 3-step process: inspiration, outline, and color. For inspiration, I usually go on Pinterest or Google and search for the type of clothing I want to make. Next, I open up my image editing software and outline what I want the torso to look like. At the front face of the torso is usually where I draw the outline of the suit and then I just guess logically where the other elements would line up. Finally, I would add some color to the interiors of the outline where I think I need it most, and then some drop-shadow.
             </p>
             <br>
-            <img class = 'first-image'src = 'RobloxGroup/Banner.png'>
+            <img class = 'first-image'src = 'RobloxGroup/primary color.png'>
             <br>
-            <img class = 'first-image'src = 'RobloxGroup/page1.png'>
+            <img class = 'first-image'src = 'RobloxGroup/suitoverlay.png'>
             <br>
-            <img class = 'first-image'src = 'RobloxGroup/page2.png'>
+            <img class = 'first-image'src = 'RobloxGroup/secondary colors.png'>
             <br>
-            <img class = 'first-image'src = 'RobloxGroup/page3.png'>
+            <img class = 'first-image'src = 'RobloxGroup/shading overlay.png'>
             <br>
 
 
@@ -165,7 +167,7 @@
             <h1>The Fall of Motivation</h1>
             <br>
             
-            <p class = 'text-description'>Many times when I upload clothing to the catalog, within 1-3 days, someone steals my clothing and sells it as their own product. Roblox continuously been having this problem and to this day there is still no solution, due to how easy it is to find someone’s template and upload it yourself on the Creator Page. For instance, one of my best-selling outfits, “Cartoony Rainbow", which has been currently taken down due to false copyright claims, has gotten over 50,000 sales. However, the next time I searched up that outfit, there were multiple copies and bots reselling my item as their own and taking me off the front page due to spam. This happened to almost every single one of my clothing and losing a huge opportunity like this was Strike 1 for me. In addition, before the end of September 2020, Roblox made it so anyone can upload clothing to the catalog and you didn't need to have a premium account. Consequently, more copiers have started coming into the platform, and instead of having my clothing copied every 3-4 days, my clothing gets copied every single day. Furthermore, later down the line, Roblox started adding fees to upload clothing, one shirt and pants would cost 10 robux. Although this fee would result in attacking copiers, I now have to pay extra to get my clothing on the catalog. Consequently, I slowly quit the platform.
+            <p class = 'text-description'>Many times when I upload clothing to the catalog, within 1-3 days, someone steals my clothing and sells it as their own product. Roblox continuously been having this problem and to this day there is still no solution, due to how easy it is to find someone’s template and upload it yourself on the Creator Page. For instance, one of my best-selling outfits, “Cartoony Rainbow", which has been currently taken down due to false copyright claims, has gotten over 50,000 sales. However, the next time I searched up that outfit. there were many copies and bots reselling my item as their own and taking me off the front page due to spam. This happened to almost every single one of my clothing and losing a huge opportunity like this was Strike 1 for me. In addition, before the end of September 2020, Roblox made it so anyone can upload clothing to the catalog and you didn't need to have a premium account. Consequently, more copiers have started coming into the platform, and instead of having my clothing copied every 3-4 days, my clothing gets copied every single day. Furthermore, later down the line, Roblox started adding fees to upload clothing, one shirt and pants would cost 10 robux. Although this fee would result in attacking copiers, I now have to pay extra to get my clothing on the catalog. Consequently, I slowly quit the platform.
             </p>
             <br>
 
